[gd_scene load_steps=6 format=3 uid="uid://drwrxl4akk264"]

[ext_resource type="Script" path="res://Templates/Enemy_Template/enemy_template.gd" id="1_k7rkf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i3vvr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mdnk7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4r7uq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xdo8y"]

[node name="EnemyTemplate" type="CharacterBody2D"]
script = ExtResource("1_k7rkf")

[node name="ChaseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
shape = SubResource("CapsuleShape2D_i3vvr")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CapsuleShape2D_mdnk7")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CapsuleShape2D_4r7uq")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CapsuleShape2D_xdo8y")
