extends Node2D


@onready var chaseArea: Area2D = $ChaseArea
@onready var damageArea: Area2D = $DamageArea
@onready var attackArea: Area2D = $AttackArea
@onready var detectionArea: Area2D = $DetectionArea

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
